<resources>
    <string name="app_name">RetrofitWithRecyclerView</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="discount">Discount</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="get_all_products">Get All Products</string>
    <string name="get_fav_prod">Get Favourite Products</string>
    <string name="exit">Exit</string>
    <string name="remove">Remove</string>
</resources>